--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@telegram-apps/sdk-vue": "^1.0.13",
+    "jose": "^5.9.6",
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "latest"
